--- a/src/ui/layout/qgslayoutpolylinewidgetbase.ui
+++ b/src/ui/layout/qgslayoutpolylinewidgetbase.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>QgsLayoutShapeWidgetBase</class>
- <widget class="QWidget" name="QgsLayoutShapeWidgetBase">
+ <class>QgsLayoutPolylineWidgetBase</class>
+ <widget class="QWidget" name="QgsLayoutPolylineWidgetBase">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>308</width>
-    <height>189</height>
+    <width>334</width>
+    <height>115</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,7 +30,7 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="label_3">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
        <horstretch>0</horstretch>
@@ -41,7 +41,7 @@
       <string notr="true">padding: 2px; font-weight: bold; background-color: rgb(200, 200, 200);</string>
      </property>
      <property name="text">
-      <string>Shape</string>
+      <string>Polyline</string>
      </property>
     </widget>
    </item>
@@ -55,8 +55,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>306</width>
-        <height>163</height>
+        <width>318</width>
+        <height>92</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="mainLayout">
@@ -75,45 +75,8 @@
           <bool>false</bool>
          </property>
          <layout class="QGridLayout" name="gridLayout">
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_3">
-            <property name="text">
-             <string>Corner radius</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <layout class="QHBoxLayout" name="horizontalLayout">
-            <item>
-             <widget class="QgsDoubleSpinBox" name="mCornerRadiusSpinBox">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="suffix">
-               <string/>
-              </property>
-              <property name="maximum">
-               <double>999.000000000000000</double>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QgsLayoutUnitsComboBox" name="mRadiusUnitsComboBox"/>
-            </item>
-           </layout>
-          </item>
-          <item row="2" column="0">
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>Style</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="QgsSymbolButton" name="mShapeStyleButton">
+          <item row="0" column="0">
+           <widget class="QgsSymbolButton" name="mLineStyleButton">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -121,12 +84,9 @@
              </sizepolicy>
             </property>
             <property name="text">
-             <string>Change...</string>
+             <string>Line style...</string>
             </property>
            </widget>
-          </item>
-          <item row="0" column="0" colspan="2">
-           <widget class="QComboBox" name="mShapeComboBox"/>
           </item>
          </layout>
         </widget>
@@ -151,28 +111,15 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>QgsDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>qgsdoublespinbox.h</header>
-  </customwidget>
-  <customwidget>
    <class>QgsSymbolButton</class>
    <extends>QToolButton</extends>
    <header>qgssymbolbutton.h</header>
   </customwidget>
-  <customwidget>
-   <class>QgsLayoutUnitsComboBox</class>
-   <extends>QComboBox</extends>
-   <header>qgslayoutunitscombobox.h</header>
-  </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>groupBox</tabstop>
   <tabstop>scrollArea</tabstop>
-  <tabstop>mShapeComboBox</tabstop>
-  <tabstop>mCornerRadiusSpinBox</tabstop>
-  <tabstop>mRadiusUnitsComboBox</tabstop>
-  <tabstop>mShapeStyleButton</tabstop>
+  <tabstop>groupBox</tabstop>
+  <tabstop>mLineStyleButton</tabstop>
  </tabstops>
  <resources/>
  <connections/>
